duniverse/ppx_fields_conv.v0.14.0/test/shadow.mlt
type t = { map : unit } [@@deriving fields]
[%%expect{|
Line _, characters _-_:
Error: ppx_fields_conv: field name "map" conflicts with one of the generated functions
|}]
